# oddsparks-ptbr

./: .gitignore  README.md  atualizar_traducao.py  locres_tool.py  pyproject.toml  translate.py
